abc339/D/er
main.cpp: In function 'void sub()':
main.cpp:686:57: error: no matching function for call to 'std::vector<std::vector<long long int> >::vector(long long int&, std::vector<std::vector<long long int> >)'
  686 |         vec dis (n,vec<vec<vll>(n,vec<vll>(n,vll(n,1e5))));
      |                                                         ^
In file included from /opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/vector:66,
                 from /opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/functional:64,
                 from main.cpp:2:
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:704:9: note: candidate: 'template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >]'
  704 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:704:9: note:   template argument deduction/substitution failed:
main.cpp:686:57: note:   deduced conflicting types for parameter '_InputIterator' ('long long int' and 'std::vector<std::vector<long long int> >')
  686 |         vec dis (n,vec<vec<vll>(n,vec<vll>(n,vll(n,1e5))));
      |                                                         ^
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:675:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >; allocator_type = std::allocator<std::vector<long long int> >]'
  675 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:675:43: note:   no known conversion for argument 1 from 'long long int' to 'std::initializer_list<std::vector<long long int> >'
  675 |       vector(initializer_list<value_type> __l,
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:656:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >; std::__type_identity_t<_Alloc> = std::allocator<std::vector<long long int> >]'
  656 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:656:23: note:   no known conversion for argument 1 from 'long long int' to 'std::vector<std::vector<long long int> >&&'
  656 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |              ~~~~~~~~~^~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:637:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >; allocator_type = std::allocator<std::vector<long long int> >; std::false_type = std::integral_constant<bool, false>]'
  637 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:637:7: note:   candidate expects 3 arguments, 2 provided
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:632:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >; allocator_type = std::allocator<std::vector<long long int> >; std::true_type = std::integral_constant<bool, true>]'
  632 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:632:7: note:   candidate expects 3 arguments, 2 provided
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:621:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >; std::__type_identity_t<_Alloc> = std::allocator<std::vector<long long int> >]'
  621 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:621:28: note:   no known conversion for argument 1 from 'long long int' to 'const std::vector<std::vector<long long int> >&'
  621 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |              ~~~~~~~~~~~~~~^~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:617:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >]'
  617 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:617:7: note:   candidate expects 1 argument, 2 provided
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:598:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >]'
  598 |       vector(const vector& __x)
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:598:7: note:   candidate expects 1 argument, 2 provided
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:566:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >; size_type = long unsigned int; value_type = std::vector<long long int>; allocator_type = std::allocator<std::vector<long long int> >]'
  566 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:566:47: note:   no known conversion for argument 2 from 'std::vector<std::vector<long long int> >' to 'const std::vector<std::vector<long long int> >::value_type&' {aka 'const std::vector<long long int>&'}
  566 |       vector(size_type __n, const value_type& __value,
      |                             ~~~~~~~~~~~~~~~~~~^~~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:553:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >; size_type = long unsigned int; allocator_type = std::allocator<std::vector<long long int> >]'
  553 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:553:51: note:   no known conversion for argument 2 from 'std::vector<std::vector<long long int> >' to 'const std::vector<std::vector<long long int> >::allocator_type&' {aka 'const std::allocator<std::vector<long long int> >&'}
  553 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |                             ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:539:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >; allocator_type = std::allocator<std::vector<long long int> >]'
  539 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:539:7: note:   candidate expects 1 argument, 2 provided
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:528:7: note: candidate: 'std::vector<_Tp, _Alloc>::vector() [with _Tp = std::vector<long long int>; _Alloc = std::allocator<std::vector<long long int> >]'
  528 |       vector() = default;
      |       ^~~~~~
/opt/homebrew/Cellar/gcc/13.2.0/include/c++/13/bits/stl_vector.h:528:7: note:   candidate expects 0 arguments, 2 provided
main.cpp:686:57: error: template argument 1 is invalid
  686 |         vec dis (n,vec<vec<vll>(n,vec<vll>(n,vll(n,1e5))));
      |                                                         ^
main.cpp:686:57: error: template argument 2 is invalid
